--- a/src/main/resources/templates/perfiles/perfil_admin/perfil/editarRol.html
+++ b/src/main/resources/templates/perfiles/perfil_admin/perfil/editarRol.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Admin - Perfiles</title>
+  <title>Admin - Editar</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
 <div id="particles-js"></div>
 <header id="header" class="okayNav-header navbar-fixed-top main-navbar-top">
 	<div class="container">
@@ -25,14 +25,13 @@
 					<img src="/img/images1.png" alt="" class="logo-1 img-responsive">
 				</a>
 
-			</div> <!-- End: .col-xs-3 -->
+			</div> 
 			<div class="col-lg-9 col-md-9 col-sm-9 col-xs-6">
 
 				<nav role="navigation" class="okayNav pull-right loaded" id="js-navbar-menu">
 					<ul id="navbar-nav" class="navbar-nav okayNav__nav--visible">
 						<li><a class="btn-nav" href="/">Home</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/usuarios}">Usuarios</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/index}">Volver atras</a></li>
+						<li><a class="btn-nav" href="#" th:href="@{/admin/perfiles/}">Volver atras</a></li>
 						</li>
 						<li><a class="btn-nav btn-border" href="#" data-toggle="modal"
 								data-target="#sign-up-form" th:href="@{/logout}">Cerrar Sesión</a></li>
@@ -41,69 +40,35 @@
 						class="okayNav__menu-toggle okay-invisible"><span></span><span></span><span></span><span></span><span></span></a>
 				</nav>
 
-			</div> <!-- End: .col-xs-9 -->
-		</div> <!-- End: .row -->
-	</div> <!-- End: .container -->
+			</div>
+		</div> 
+	</div> 
 </header>
 <body class="login">
 	<div class="container">
-
-		
-		<!--<div class="login-container-wrapper clearfix">
+		<div class="login-container-wrapper clearfix">
 			<div class="logo">
-				<i class="fa fa-sign-in"></i>
+				<i class="fa fa-plus-circle"></i>
 			</div>
+			<div class="welcome"><strong>Editar Rol</strong></div>
+			
+			<form class="form-horizontal login-form" th:action="${editar}" th:object="${perfil}" method="post">
+				<p><strong>Nombre:</strong> <input class="form-control input-lg" type="text" th:field="*{nombre}" required></p>
+				<br>
+	                <p>                    
+                	<label for="checkhabilitado">
+					    Habilitado
+					</label>
+                    <input class="form-control input-lg" type="checkbox" th:field="*{habilitado}" id="checkhabilitado" value="1" checked>
+                </p>
+                    		<input type="hidden" th:field="*{idPerfil}" />
+				<button class="btn btn-success btn-lg btn-block" type="submit">Finalizar</button>
+			</form>
 
-		</div>-->
-		<div class="tablada">
-			<h1>Lista de perfiles: </h1>
-<table class="rwd-table">
-  <tr>
-    <th>Nombre</th>
-    <th>Estado</th>
-    <th>Editar</th>
-    <th>Hab/Deshab</th>
-  </tr>
- <tbody>
-   <tr th:each="perfil : ${lstPerfiles}">
-						<td><span th:text="${perfil.nombre}" /></td>
-												<td><a  th:if="${perfil.habilitado}" style="color:chartreuse">Habilitado</a>
-                        	<a th:if="${!perfil.habilitado}" style="color:red;">Deshabilitado</td>
-						</td>
-								<td>
-								<a  th:href="@{/admin/perfil/editar/{id}(id=${perfil.idPerfil})}"><img class="tamimg" src="/img/editar.png" alt="no-img" ></a> 
-										</td>
-		                     <td><a  th:if="${perfil.habilitado}" th:href="@{/admin/perfil/deshabilitar/{id}(id=${perfil.idPerfil})}"><img class="tamimg" src="/img/BasuraVerde.png" alt="no-img"></a>
-                        	<a th:if="${!perfil.habilitado}" th:href="@{/admin/perfil/habilitar/{id}(id=${perfil.idPerfil})}"><img class="tamimg" src="/img/basuraRoja.png" alt="no-img"></a></td>
-     	</tr>
-    </tbody>
-</table>
-
-<p id="pepe">&larr; <a th:href="@{/admin/perfil/nuevo}" style="color:black">click derecho para agregar a un nuevo perfil</a>  &rarr;</p>
 		</div>
-    
+					    </br>
 	</div>
-	
-
   </body>
-  <footer>
-	<div class="container3"> 
-		<div class="row">
-		   <div class="col-lg-12">
-			 <div class="alert alert-info" role="alert">
-			   <div class="row vertical-align">
-				 <div class="col-xs-1 text-center">
-				   <i class="fa fa-info fa-2x"></i> 
-				 </div>
-				 <div class="col-xs-11">
-				   <strong>Information:</strong> Estas navegando en modo Administrador, suerte!
-				 </div>
-			   </div>
-			 </div>      
-		   </div>
-		 </div>  
-	   </div>
-  </footer>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script><script  src="/js/login.js"></script>
