--- a/src/main/resources/templates/perfiles/perfil_admin/usuario/nuevoUsuario.html
+++ b/src/main/resources/templates/perfiles/perfil_admin/usuario/nuevoUsuario.html
@@ -60,7 +60,9 @@
 				<strong>Tipo DOC:</strong> 
 				<select  th:field="*{tipoDoc}" required >
 					<option value="DNI">DNI</option>
-					<option value="CI">Cedula de Identidad</option>
+					<option value="LE">LE</option>
+					<option value="LI">LI</option>
+					<option value="CI">CI</option>
 				</select>
 				<br>
 				<p><strong>DOC:</strong> <input class="form-control input-lg" type="number" th:field="*{documento}"required></p>
