--- a/src/main/resources/templates/perfiles/perfil_auditor/usuario/usuarios.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/usuario/usuarios.html
@@ -56,7 +56,7 @@
 
 		</div>-->
 		<div class="tablada">
-			<h1>Lista de usuarios: </h1>
+
 <table class="rwd-table">
   <tr>
     <th>Usuario</th>
@@ -78,7 +78,7 @@
     </tbody>
 </table>
 
-	<p id="pepe">&larr; <a th:href="@{/auditor/usuario/usuarios/pdf}" style="color:black"> click derecho para descargar la lista de usuarios en formato PDFo</a>  &rarr;</p>
+	<p id="pepe">&larr; <a th:href="@{/auditor/usuario/usuarios/pdf}" style="color:black"> click derecho para descargar la lista de usuarios en formato PDF</a>  &rarr;</p>
 		</div>
     
 	</div>
