--- a/src/main/resources/templates/perfiles/perfil_auditor/perfil/roles.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/perfil/roles.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="/css/audiyadminList.css">
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="/css/audiyadminList2.css">
 <link rel="shortcut icon" href="/img/images1.png">
 
 
@@ -56,7 +56,6 @@
 
 		</div>-->
 		<div class="tablada">
-			<h1>Lista de Roles: </h1>
 <table class="rwd-table">
   <tr>
     <th>Rol</th>
