--- a/src/main/resources/static/css/audiyadminList2.css
+++ b/src/main/resources/static/css/audiyadminList2.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Varela);
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&display=swap');
 @import "https://fonts.googleapis.com/css?family=Montserrat:300,400,700";
+@import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 html {
   height: 100%;
