descargas de pdf's implementadas

--- a/src/main/resources/templates/perfiles/perfil_auditor/perfil/roles.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/perfil/roles.html
@@ -72,7 +72,7 @@
     </tbody>
 </table>
 
-<p id="pepe">&larr; <a th:href="@{/auditor/usuarios/descargar?format=pdf}" style="color:black"> click derecho para descargar la lista de perfiles en formato PDF</a>  &rarr;</p>
+<p id="pepe">&larr; <a th:href="@{/auditor/perfiles/pdf}" style="color:black"> click derecho para descargar la lista de perfiles en formato PDF</a>  &rarr;</p>
 		</div>
     
 	</div>
