--- a/src/main/resources/templates/perfiles/perfil_auditor/usuario/usuarios.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/usuario/usuarios.html
@@ -78,7 +78,7 @@
     </tbody>
 </table>
 
-	<p id="pepe">&larr; <a th:href="@{/auditor/usuario/usuarios/pdf}" style="color:black"> click derecho para descargar la lista de usuarios en formato PDF</a>  &rarr;</p>
+	<p id="pepe">&larr; <a th:href="@{/auditor/usuarios/pdf}" style="color:black"> click derecho para descargar la lista de usuarios en formato PDF</a>  &rarr;</p>
 		</div>
     
 	</div>
