parte 1 terminada, quedan detalles minimos

--- a/src/main/resources/templates/perfiles/perfil_admin/usuario/usuarios.html
+++ b/src/main/resources/templates/perfiles/perfil_admin/usuario/usuarios.html
@@ -55,6 +55,7 @@
     <th>Nombre</th>
     <th>Apellido</th>
     <th>Documento</th>
+    <th>Tipo</th>
     <th>Email</th>
     <th>Rol</th>
     <th>Editar</th>
@@ -66,6 +67,7 @@
 						<td><span th:text="${usuario.nombre}" /></td>
 						<td><span th:text="${usuario.apellido}" /></td>
 						<td><span th:text="${usuario.documento}" /></td>
+						<td><span th:text="${usuario.tipoDoc}" /></td>
 						<td><span th:text="${usuario.email}" /></td>
 						<td><span th:text="${usuario.getPerfil().getNombre()}" /></td>
 								<td>
