vistas de aula auditor + algunos arreglos e imnplements

--- a/src/main/resources/templates/perfiles/perfil_admin/aula/crearTradicional.html
+++ b/src/main/resources/templates/perfiles/perfil_admin/aula/crearTradicional.html
@@ -42,7 +42,7 @@
 							 <input type="text" name="pizarron" placeholder="pizarron" required  th:field="*{pizarron}">
                             <label for="pizarron"></label>
                              Tiene proyector?: 
-                            <input type="checkbox" name="proyector" placeholder="cantidad de sillas" required  th:field="*{tieneProyector}">
+                            <input type="checkbox" name="proyector" placeholder="cantidad de sillas" th:field="*{tieneProyector}">
                             <label for="proyector"></label>
                         </div>
                        <input type="hidden" th:field="*{id}"
