vista index auditor mejorada + algunas implementaciones

--- a/src/main/resources/templates/perfiles/perfil_auditor/aula/index.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/aula/index.html
@@ -31,8 +31,7 @@
 				<nav role="navigation" class="okayNav pull-right loaded" id="js-navbar-menu">
 					<ul id="navbar-nav" class="navbar-nav okayNav__nav--visible">
 						<li><a class="btn-nav" href="/">Home</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/perfiles}">Roles</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/index}">Volver atras</a></li>
+						<li><a class="btn-nav" href="#" th:href="@{/auditor/index}">Volver atras</a></li>
 						</li>
 						<li><a class="btn-nav btn-border" href="#" data-toggle="modal"
 								data-target="#sign-up-form" th:href="@{/logout}">Cerrar Sesión</a></li>
