--- a/src/main/resources/templates/perfiles/perfil_auditor/edificio/index.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/edificio/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Aulas</title>
+  <title>Edificios</title>
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -31,8 +31,7 @@
 				<nav role="navigation" class="okayNav pull-right loaded" id="js-navbar-menu">
 					<ul id="navbar-nav" class="navbar-nav okayNav__nav--visible">
 						<li><a class="btn-nav" href="/">Home</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/perfiles}">Roles</a></li>
-						<li><a class="btn-nav" href="#" th:href="@{/admin/index}">Volver atras</a></li>
+						<li><a class="btn-nav" href="#" th:href="@{/auditor/index}">Volver atras</a></li>
 						</li>
 						<li><a class="btn-nav btn-border" href="#" data-toggle="modal"
 								data-target="#sign-up-form" th:href="@{/logout}">Cerrar Sesión</a></li>
