--- a/src/main/resources/templates/perfiles/perfil_auditor/indexAuditor.html
+++ b/src/main/resources/templates/perfiles/perfil_auditor/indexAuditor.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="/css/auditor.css">
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'><link rel="stylesheet" href="/css/indexA.css">
 <link rel="shortcut icon" href="/img/images1.png">
 
 
@@ -46,51 +46,141 @@
 	</div> <!-- End: .container -->
 </header>
 <body class="login">
-	<div class="container">
-
-		
-	<!--	<div class="login-container-wrapper clearfix">
-			<div class="logo">
-				<i class="fa fa-sign-in"></i>
+	<div class="francoponce">
+	<div class="grids">
+		<div class="card-one">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-1">
+			 <a href="#" th:href="@{/notaPedido/index}"> <div class="text-box">
+				<h3 class="text-box-top">Ver estado de los Pedidos</h3>
+				<h1 class="text-box-middle">Pedido!</h1>
+				<h3 class="text-box-lower">--- Click derecho ---</h3>
+			  </div></a>
 			</div>
-			<hr>
-
-				<h1 class="text-centerr" class="coloritos">SESSION</h1>
-				<h1 class="text-centerr" class="coloritos">CERRADA</h1>
-				<h1 class="text-centerr" class="coloritos">CORRECTAMENTE!</h1>
-
-			<hr>
-			<br>
-			<div class="form-group">
-			    <button onclick="location.href='/'" class="btn btn-success btn-lg btn-block">Inicio</button>
+			<div class="card__side card__side--back" id="back-1">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
 			  </div>
-		</div>-->
-    
+			</div>
+		  </div>
+		</div>
+		<div class="card-two">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-2">
+				<a href="#" th:href="@{/notaPedido/generar/pedido}"> <div class="text-box">
+				<h3 class="text-box-top">Generar Pedido</h3>
+				<h1 class="text-box-middle">Pedido!</h1>
+				<h3 class="text-box-lower">--- click derecho ---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-2">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card-three">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-3">
+				<a href="#" th:href="@{/departamento/index}"> <div class="text-box">
+				<h3 class="text-box-top">Ver departamentos</h3>
+				<h1 class="text-box-middle">Departamento!</h1>
+				<h3 class="text-box-lower">--- Click derecho ---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-3">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card-four">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-4">
+				<a href="#" th:href="@{/carrera/index}"> <div class="text-box">
+				<h3 class="text-box-top">Ver carreras</h3>
+				<h1 class="text-box-middle">Carrera!</h1>
+				<h3 class="text-box-lower">--- Click derecho ---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-4">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card-five">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-5">
+				<a href="#" th:href="@{/edificio/index}">  <div class="text-box">
+				<h3 class="text-box-top">Ver edificios</h3>
+				<h1 class="text-box-middle">Edificio!</h1>
+				<h3 class="text-box-lower">--- Click derecho---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-5">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card-six">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-6">
+				<a href="#" th:href="@{/aula/index}"> <div class="text-box">
+				<h3 class="text-box-top">Ver aulas</h3>
+				<h1 class="text-box-middle">Aula!</h1>
+				<h3 class="text-box-lower">--- Click derecho---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-6">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+		<div class="card-seven">
+		  <div class="card">
+			<div class="card__side card__side--front" id="front-7">
+				<a href="#" th:href="@{/materia/index}">  <div class="text-box">
+				<h3 class="text-box-top">Ver Materias</h3>
+				<h1 class="text-box-middle">Materia!</h1>
+				<h3 class="text-box-lower">--- Click derecho---</h3>
+			  </div></a>
+			</div>
+			<div class="card__side card__side--back" id="back-7">
+			  <div class="text-box">
+				<h3 class="text-box-top">Cards Flipped</h3>
+				<h1 class="text-box-middle">Great!</h1>
+				<h3 class="text-box-lower">--- More Text ---</h3>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
 	</div>
-
   </body>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script><script  src="/js/login.js"></script>
 
 </body>
-  <footer>
-	<div class="container3"> 
-		<div class="row">
-		   <div class="col-lg-12">
-			 <div class="alert alert-info" role="alert">
-			   <div class="row vertical-align">
-				 <div class="col-xs-1 text-center">
-				   <i class="fa fa-info fa-2x"></i> 
-				 </div>
-				 <div class="col-xs-11">
-				 <strong>Information:</strong> Estas navegando en modo Auditor, suerte!
-				 </div>
-			   </div>
-			 </div>      
-		   </div>
-		 </div>  
-	   </div>
-  </footer>
 
 </html>
